force-app/main/default/objects/Launchpad__Job__c/fields/Hourly_or_Salary__c.field-meta.xml
<CustomField>
    <fullName>Hourly_or_Salary__c</fullName>
    <label>Hourly or Salary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>