force-app/main/default/objects/Launchpad__Job__c/fields/Job_Industry__c.field-meta.xml
<CustomField>
    <fullName>Job_Industry__c</fullName>
    <label>Job Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*placeholder*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>