force-app/main/default/objects/Launchpad__Job__c/fields/Job_Source__c.field-meta.xml
<CustomField>
    <fullName>Job_Source__c</fullName>
    <label>Job Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>