force-app/main/default/objects/Launchpad__Job__c/fields/Online_application_link_URL__c.field-meta.xml
<CustomField>
    <fullName>Online_application_link_URL__c</fullName>
    <label>Online application link URL</label>
    <type>Url</type>
</CustomField>